@@ -1,5 +1,9 @@
 https://maochunguang.github.io/java-interview/interview_topn/toutiao.html#%E6%8A%80%E6%9C%AF%E7%82%B9%E6%B1%87%E6%80%BB
 
+# 目录
+
+<!-- TOC -->
+
 [TOC]
 
 
@@ -352,9 +356,65 @@ TERMINATED
 
 ## 20、什么是反射？反射的用途？为什么java需要反射，c++不需要。
 
-> 反射是 运行时动态获取类结构（如字段、方法、构造器）并操作其对象的能力；用途包括 框架自动注入（Spring）、序列化（Jackson）、动态代理（AOP）、插件系统。
+> Java 反射机制是在运行期动态加载类、获取类的一切信息（方法、字段、构造器、注解等），并能操作它们，核心是 JVM 在运行时为每一个加载的类都生成了一个 java.lang.Class 对象，保存了类的完整结构信息。
 >
 > Java 是 **解释 + 动态加载**，类在运行时才确定，反射是框架动态操作的基石；C++ 是 **静态编译**，模板在编译期展开，依赖注入/序列化靠模板元编程，无需运行时反射。
+
+| 方式                                                       | 代码                                                         | 说明                                          | 适用场景                           |
+| ---------------------------------------------------------- | ------------------------------------------------------------ | --------------------------------------------- | ---------------------------------- |
+| **1. Class.forName + newInstance()**（最经典）             | `User user = (User) Class.forName("com.User").newInstance();` | 需要**无参构造器**，JDK9 已废弃 newInstance() | 老项目、框架（如 Spring 早期）     |
+| **2. Class 对象 + getConstructor().newInstance()**（推荐） | `Constructor<User> c = User.class.getConstructor();` `User user = c.newInstance();` | 可指定任意构造器，传参，支持私有构造          | Spring、MyBatis 等现代框架主流方式 |
+| **3. 直接 Constructor.newInstance()**（最常用）            | `User user = User.class.getConstructor(String.class, int.class)` `.newInstance("张三", 18);` | 功能最全，支持私有构造 + 带参                 | 所有需要反射创建对象的场景         |
+
+如果我们动态获取到这些信息，我们需要依靠 Class 对象。Class 类对象将一个类的方法、变量等信息告诉运行的程序。Java 提供了四种方式获取 Class 对象:
+
+**1. 知道具体类的情况下可以使用：**
+
+```java
+Class alunbarClass = TargetObject.class;
+```
+
+但是我们一般是不知道具体类的，基本都是通过遍历包下面的类来获取 Class 对象，通过此方式获取 Class 对象不会进行初始化
+
+**2. 通过 `Class.forName()`传入类的全路径获取：**
+
+```java
+Class alunbarClass1 = Class.forName("cn.javaguide.TargetObject");
+```
+
+**3. 通过对象实例`instance.getClass()`获取：**
+
+```java
+TargetObject o = new TargetObject();
+Class alunbarClass2 = o.getClass();
+```
+
+**4. 通过类加载器`xxxClassLoader.loadClass()`传入类路径获取:**
+
+```java
+ClassLoader.getSystemClassLoader().loadClass("cn.javaguide.TargetObject");
+```
+
+通过类加载器获取 Class 对象不会进行初始化，意味着不进行包括初始化等一系列步骤，静态代码块和静态对象不会得到执行
+
+| 序号 | 获取方式                                    | 代码示例                                                     | 说明&特点                                                    |
+| ---- | ------------------------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| 1    | **类名.class**（最常用、最推荐）            | `Class<User> clazz = User.class;`                            | 编译期就确定，**类型安全**，不会抛异常                       |
+| 2    | **对象.getClass()**（运行时才有对象时用）   | `User user = new User();` `Class<? extends User> clazz = user.getClass();` | 继承自 Object，返回运行时真实类型                            |
+| 3    | **Class.forName("全限定类名")**（动态加载） | `Class<?> clazz = Class.forName("com.example.User");`        | 常用于配置文件、插件系统，会触发**静态块初始化**，可能抛 `ClassNotFoundException` |
+| 4    | **类加载器加载**（高级用法）                | `Class<?> clazz = ClassLoader.getSystemClassLoader().loadClass("com.example.User");` | **不会触发类初始化**（静态块不执行），常用于热加载、自定义类加载器 |
+
+| 问题                                                    | 答案                                                         |
+| ------------------------------------------------------- | ------------------------------------------------------------ |
+| `Class.forName()` 和 `ClassLoader.loadClass()` 的区别？ | `forName()` 会**执行静态代码块**（类初始化） `loadClass()` 只加载类，**不初始化** |
+| 哪种方式最安全？                                        | `User.class`（编译期确定）                                   |
+| Spring/MyBatis 里常用哪种？                             | `Class.forName()`（读取配置动态加载驱动、Mapper 等）         |
+| 基本数据类型也能获取 Class 吗？                         | 可以！`int.class`、`Integer.TYPE`                            |
+
+| 题目                   | 答案数量 | 具体方式                                                     |
+| ---------------------- | -------- | ------------------------------------------------------------ |
+| 获取 Class 对象的方式  | **4 种** | `.class`、`.getClass()`、`Class.forName()`、`ClassLoader.loadClass()` |
+| 反射创建对象实例的方式 | **3 种** | `Class.forName().newInstance()`、`class.getConstructor().newInstance()`、`Constructor.newInstance()` |
 
 ## 21、有哪些方式可以创建一个对象？
 
@@ -436,6 +496,631 @@ p.name = "Tom"; // 直接操作字段
 | **插入/删除** | **O(n)**（中间移位）   | **O(1)**（头尾）             |
 | **内存开销**  | 小（数组）             | 大（每个节点两个指针）       |
 | **适用场景**  | **读多写少、随机访问** | **头尾操作频繁、插入删除多** |
+
+## 25、讲讲类的实例化顺序
+
+> **父类 → 子类**，**静态 → 成员变量 → 构造方法** 完整执行顺序（死记版）：
+
+1. **父类静态变量** / **父类静态代码块**（按书写顺序）
+2. **子类静态变量** / **子类静态代码块**（按书写顺序）
+3. **父类普通成员变量赋值** → **父类普通代码块**
+4. **父类构造方法**
+5. **子类普通成员变量赋值** → **子类普通代码块**
+6. **子类构造方法**
+
+## 26、JAVA有顺序的map
+
+Java 中真正“有顺序”的 Map 只有 LinkedHashMap（插入顺序）和 TreeMap（键排序）， 前者靠双向链表，后者靠红黑树，选型看你是要“插入顺序”还是“键排序”。
+
+| 实现类                    | 有序类型                          | 保证顺序的底层机制                                       | 适用场景                    |
+| ------------------------- | --------------------------------- | -------------------------------------------------------- | --------------------------- |
+| **LinkedHashMap**         | **插入顺序**                      | 继承 HashMap + **维护一个双向链表**（before/after 指针） | 最常用，缓存、LRU           |
+| **TreeMap**               | **键的自然顺序**（或 Comparator） | **红黑树**（自平衡二叉搜索树）                           | 需要按 key 排序（范围查询） |
+| **ConcurrentSkipListMap** | **键的自然顺序**（线程安全）      | **跳表（Skip List）** + 并发设计                         | 高并发有序 Map              |
+
+| Map 实现类                | 数据结构               | 插入顺序？ | 排序顺序？ | 线程安全？ | 时间复杂度（get/put） |
+| ------------------------- | ---------------------- | ---------- | ---------- | ---------- | --------------------- |
+| **HashMap**               | 数组 + 链表/红黑树     | ×          | ×          | ×          | O(1)                  |
+| **LinkedHashMap**         | HashMap + **双向链表** | √          | ×          | ×          | O(1)                  |
+| **TreeMap**               | **红黑树**             | ×          | √          | ×          | O(log n)              |
+| **ConcurrentHashMap**     | 分段数组 + 链表/红黑树 | ×          | ×          | √          | O(1)                  |
+| **ConcurrentSkipListMap** | **跳表（多层链表）**   | ×          | √          | √          | O(log n)              |
+
+## 27、继承和聚合
+
+- 继承 is-a 强，聚合 has-a 松
+- 继承是“生死与共”的亲父子关系，聚合是“可换可离”的合作关系
+- 能用聚合（组合）解决的，坚决不用继承！
+
+| 面试官问题                       | 标准回答（直接背）                                           |
+| -------------------------------- | ------------------------------------------------------------ |
+| 为什么说“优先使用组合而非继承”？ | 继承破坏封装性、增加耦合、父类改动会影响所有子类；组合更灵活、符合开闭原则 |
+| 继承有什么风险？                 | 白箱复用、父类变化影响子类、容易造成类爆炸（继承层级太深）   |
+| 聚合和组合的区别？（进阶）       | 聚合（弱）：部分可以脱离整体存在 组合（强）：部分和整体生命周期一致 |
+| 什么时候必须用继承？             | 1. 明确 is-a 关系 2. 需要多态（父类引用指向子类对象） 3. 需要复用父类代码且无法用组合实现 |
+
+## 28、描述动态代理的几种实现方式，分别说出相应的优缺点
+
+> **日常开发/Spring 项目：有接口用 JDK，无接口用 CGLIB 就够了**
+
+| 实现方式                 | 所属技术          | 能否代理类（无接口） | 性能排序 | 线程安全 | 优点                                                         | 缺点                                                         |
+| ------------------------ | ----------------- | -------------------- | -------- | -------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| **1. JDK 动态代理**      | java.lang.reflect | ❌ 只能代理接口       | ★★★☆☆    | 是       | 1. JDK 原生，无额外依赖 2. 实现简单，稳定 3. 所有框架都支持  | 1. **必须实现接口** 2. 反射调用，性能稍慢 3. 不能代理 final 类 |
+| **2. CGLIB**             | ASM 字节码框架    | √ 可以代理普通类     | ★★★★☆    | 是       | 1. **不需要接口**，直接生成子类 2. 性能比 JDK 代理高 3. Spring 默认选择 | 1. 不能代理 final 类和 final 方法 2. 依赖第三方 jar 3. 老版本有内存泄漏风险（已修复） |
+| **3. ByteBuddy**         | ByteBuddy         | √ 可以代理类/接口    | ★★★★★    | 是       | 1. **性能最高**（接近直接调用） 2. API 优雅，功能强大 3. 支持 Java 17+ 模块化 4. Netflix、Dubbo 3 等大厂使用 | 1. 学习成本稍高 2. 依赖第三方 jar                            |
+| **4. Javassist**         | Javassist         | √ 可以代理类/接口    | ★★★★☆    | 是       | 1. API 简单，容易上手 2. 生成字节码可读性好 3. Hibernate、Quartz 使用 | 1. 性能略低于 ByteBuddy 2. 依赖第三方 jar                    |
+| **5. ASM**（底层黑魔法） | ASM               | √                    | ★★★★★    | 是       | 1. **性能最强**（直接操作字节码） 2. 体积最小 3. CGLIB、ByteBuddy 底层都用它 | 1. 学习曲线极陡 2. 手写字节码极易出错 3. **基本没人手写**    |
+
+### JDK动态代理和CGLIB的区别
+
+JDK 动态代理靠接口 + 反射，CGLIB 靠继承子类 + invokeSuper 
+
+Spring 默认策略：有接口用 JDK，无接口或强制 proxy-target-class=true 就用 CGLIB 
+
+99% 的场景用 Spring 自动选择就行，只有极致性能才自己选
+
+| 对比维度                | JDK 动态代理（java.lang.reflect.Proxy）  | CGLIB（Code Generation Library）                        |
+| ----------------------- | ---------------------------------------- | ------------------------------------------------------- |
+| **底层实现原理**        | 运行时动态生成实现接口的代理类（字节码） | 运行时动态生成目标类的**子类**（继承）                  |
+| **是否必须实现接口**    | **必须**（只能代理接口）                 | **不需要**（可以直接代理普通类）                        |
+| **代理方式**            | 实现接口 + InvocationHandler             | 生成子类 + MethodInterceptor                            |
+| **能否代理 final 类**   | ❌ 不能（final 类不能被继承）             | ❌ 不能（final 类不能被继承）                            |
+| **能否代理 final 方法** | ❌ 不能（final 方法不能被重写）           | ❌ 不能                                                  |
+| **能否代理私有方法**    | ❌ 不能（只能代理接口方法）               | ❌ 不能（私有方法无法重写）                              |
+| **能否代理静态方法**    | ❌ 不能                                   | ❌ 不能                                                  |
+| **性能**                | 较慢（反射 + invoke 调用）               | **更快**（子类直接调用 super）                          |
+| **生成的代理类位置**    | 内存中（$Proxy0、$Proxy1…）              | 默认保存到磁盘（可配置关闭）                            |
+| **依赖**                | JDK 原生，无额外 jar                     | 需要引入 cglib jar（或 spring-boot-starter-aop 已包含） |
+| **Spring AOP 默认选择** | 有接口时用 JDK                           | 无接口或强制 proxy-target-class=true 时用 CGLIB         |
+| **典型使用场景**        | MyBatis Mapper、Spring AOP（有接口）     | Spring AOP（无接口）、Hibernate 懒加载、方法耗时统计    |
+
+## 29、为什么 CGLIB 不能代理“纯接口”？
+
+CGLIB 是通过“继承实现类”来完成代理的，所以它天然不能代理“纯接口”，只能代理具体的 class。 反过来，JDK 动态代理正好相反：只能代理接口，不能代理普通类。
+
+| 技术         | 能代理“纯接口”（没有实现类的 interface）吗？ | 能代理“普通类”（没有实现任何接口的 class）吗？ |
+| ------------ | -------------------------------------------- | ---------------------------------------------- |
+| JDK 动态代理 | √ 可以                                       | × 不行                                         |
+| CGLIB        | × 不行                                       | √ 可以                                         |
+
+## 30、Final的用途
+
+| 使用位置        | 写法示例                                    | 核心作用（一句话） | 实际意义 & 典型场景                                |
+| --------------- | ------------------------------------------- | ------------------ | -------------------------------------------------- |
+| **1. 修饰变量** | `final int MAX = 100;` `final String NAME;` | **不可重新赋值**   | 常量、配置值、线程安全、让 JVM 优化（内联常量）    |
+| **2. 修饰方法** | `public final void save() {}`               | **子类不能重写**   | 防止子类误改核心逻辑（如模板方法中的关键步骤）     |
+| **3. 修饰类**   | `public final class String {}`              | **不能被继承**     | 保证设计不变、线程安全、性能优化（如字符串常量池） |
+
+| 位置           | 具体效果                                                     | 经典使用场景（大厂都这么写）                                 |
+| -------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
+| **final 变量** | 基本类型：值不可变 引用类型：引用地址不可变（对象内容仍可变） | `private final UserRepository userRepository;`（Spring 依赖注入） `public static final long SERIAL_VERSION_UID = 1L;` |
+| **final 方法** | 不能被 override，但可以被重载                                | `Object.getClass()`、`Thread.isInterrupted()` 防止子类破坏逻辑 |
+| **final 类**   | 不能有子类，典型代表：`String`、`Integer`、`Long`、`Double` 等包装类 | 不可变类设计，保证线程安全 + 允许 JVM 做常量池优化           |
+
+| 问题                            | 标准答案（金句）                                             |
+| ------------------------------- | ------------------------------------------------------------ |
+| final 变量真的完全不可变吗？    | 基本类型完全不可变，引用类型只能保证“引用不变”，对象内容仍可变（所以要配合不可变对象设计） |
+| final 和 immutable 的区别？     | final 是语言层面的“不可再赋值”，immutable 是设计层面的“所有状态都不可变”（如 String） |
+| final 方法可以被重载吗？        | 可以重载，但不能被重写                                       |
+| final 有什么性能好处？          | JVM 可以内联 final 方法和常量，提升运行速度（尤其是 static final） |
+| Spring 中为什么这么爱用 final？ | 让 bean 的依赖在构造器注入后不可变，更符合函数式编程和线程安全理念 |
+
+## 31、给出三种单例模式
+
+### 1. 饿汉式（最简单，最常用，99% 公司都在用）
+```java
+public class Singleton1 {
+    // 类加载时就创建，天然线程安全
+    private static final Singleton1 INSTANCE = new Singleton1();
+
+    private Singleton1() {
+        // 防止反射破坏
+        // throw new RuntimeException("单例禁止反射调用");
+    }
+
+    public static Singleton1 getInstance() {
+        return INSTANCE;
+    }
+}
+// 优点：简洁、无锁、绝对线程安全
+// 缺点：即使你不用它，也会提前加载（几乎没影响）
+```
+### 2. 静态内部类（完美平衡，面试最爱写）
+```java
+public class Singleton2 {
+    private Singleton2() {}
+
+    // 只有第一次调用 getInstance 时才会加载内部类，天才设计！
+    private static class Holder {
+        private static final Singleton2 INSTANCE = new Singleton2();
+    }
+
+    public static Singleton2 getInstance() {
+        return Holder.INSTANCE;
+    }
+}
+// 优点：延迟加载 + 线程安全 + 性能高 + 防反射 + 防序列化破坏
+// 缺点：没有（真的没有）
+```
+### 3. 枚举单例（Effective Java 作者推荐，最强防破解版）
+```java
+public enum Singleton3 {
+    INSTANCE;  // 唯一实例
+
+    // 可以直接加业务方法
+    public […]void doSomething() {
+        System.out.println("我是世界上最强的单例");
+    }
+}
+
+// 使用
+Singleton3.INSTANCE.doSomething();
+```
+**优点：**
+- 天生线程安全
+- 防止反射攻击（反射会抛异常）
+- 防止序列化破坏（JVM 保证）
+- 防止反序列化创建新对象
+- 代码最少
+
+| 实现方式   | 懒加载 | 线程安全 | 性能 | 防反射 | 防序列化 | 代码量 | 推荐场景           |
+| ---------- | ------ | -------- | ---- | ------ | -------- | ------ | ------------------ |
+| 饿汉式     | No     | Yes      | 高   | No     | No       | 少     | 99% 项目（最常用） |
+| 静态内部类 | Yes    | Yes      | 高   | Yes    | Yes      | 中     | 追求完美（推荐）   |
+| 枚举       | No     | Yes      | 高   | Yes    | Yes      | 最少   | 怕被破解/配置类    |
+
+### 补充：双重检查锁（DCL）
+```java
+// 虽然能用，但容易写错，面试写出来会被扣分
+public class Singleton {
+    private static volatile Singleton instance;  // 必须加 volatile！
+
+    private Singleton() {}
+
+    public static Singleton getInstance() {
+        if (instance == null) {
+            synchronized (Singleton.class) {
+                if (instance == null) {
+                    instance = new Singleton();
+                }
+            }
+        }
+        return instance;
+    }
+}
+```
+### 终极结论（面试直接说）：
+
+| 场景                   | 推荐写法         |
+| ---------------------- | ---------------- |
+| 普通项目               | 饿汉式（最简单） |
+| 追求极致/怕被问细节    | 静态内部类       |
+| 配置类/工具类/怕被破解 | 枚举（最强）     |
+
+### 为什么必须加 volatile？（99% 的人都说不清）
+
+这行代码：
+
+java
+
+```
+instance = new Singleton();
+```
+
+实际上在 JVM 里会被拆成 3 步：
+
+1. 分配内存空间
+2. 在内存里执行构造方法，初始化对象
+3. 把 instance 引用指向这块内存（此时 instance ≠ null）
+
+**没有 volatile 时，2 和 3 可能被重排序！**
+
+可能执行顺序变成：1 → 3 → 2 导致其他线程在第 1 重检查时，看到 instance != null，但对象还没构造完 → 拿到一个“半成品对象” → 程序直接崩！
+
+加了 volatile 后，JVM 插入内存屏障，**禁止 2 和 3 重排序**，完美解决。
+
+**“为什么第二重检查还要判断 null？”** 
+
+→ 因为可能多个线程同时通过了第一重检查，进入锁块，必须再判断一次。
+
+**“volatile 可以去掉吗？”**
+
+ → JDK 1.4 及以前可以（那时候有 bug），JDK 5+ 必须加！
+
+**“怎么防止反射破坏？”**
+
+ → 构造器里判断 instance != null 就抛异常。
+
+**“怎么防止序列化破坏？”**
+
+ → 加 readResolve() 方法返回 instance。
+
+**“那你为什么不推荐 DCL？”** 
+
+→ 因为容易写错（忘 volatile 就是事故），静态内部类写法更简单、更安全、性能一样高。
+
+## 32、能不能只在父类写一次 hashCode() 和 equals()
+
+### 方案一、使用objects.hash() + instanceof基类
+
+
+
+    public abstract class BaseEntity {
+        private Long id;  // 通常业务对象都靠 id 判断相等
+        // 所有子类自动继承这个完美的 equals 和 hashCode
+        @Override
+        public boolean equals(Object o) {
+            if (this == o) return true;
+            if (o == null || getClass() != o.getClass()) return false;  // 严格类型比较
+            BaseEntity that = (BaseEntity) o;
+            return Objects.equals(id, that.id);
+        }
+    
+        @Override
+        public int hashCode() {
+            return Objects.hash(getClass(), id);  // getClass() 保证不同子类 hash 不冲突
+        }
+    
+        // getter/setter...
+    }
+    public class User extends BaseEntity { ... }
+    public class Order extends BaseEntity { ... }
+    // 自动满足：new User(1L).equals(new User(1L)) → true
+    // new User(1L).equals(new Order(1L)) → false
+### 方案二、Lombok
+
+```
+@Getter
+@EqualsAndHashCode   // ← 就这一行，全部搞定！
+public abstract class BaseEntity {
+    private Long id;
+}
+
+@Entity
+class User extends BaseEntity {
+    private String name;
+    private String email;
+    // 什么都不用写！自动按 id 生成 equals/hashCode
+}
+@EqualsAndHashCode(callSuper = true)  // 让子类字段也参与
+public class User extends BaseEntity {
+    private String name;
+    // equals 会同时比较 id + name
+}
+```
+
+### 方案三、Apache Commons Lang
+
+```
+@Override
+public boolean equals(Object o) {
+    return EqualsBuilder.reflectionEquals(this, o);
+}
+
+@Override
+public int hashCode() {
+    return HashCodeBuilder.reflectionHashCode(this);
+}
+```
+
+或者“只比较某些字段”：
+
+```
+@Override
+public boolean equals(Object o) {
+    return new EqualsBuilder()
+            .appendSuper(super.equals(o))
+            .append(id, ((User)o).id)
+            .append(name, ((User)o).name)
+            .isEquals();
+}
+```
+
+
+
+## 33、设计模式
+
+### Java 23 种经典设计模式（GoF）+ 常考现代模式（2025 面试终极版）
+
+| 分类       | 设计模式                              | 一句话作用                           | 大厂真实使用场景（必背）                              |
+| ---------- | ------------------------------------- | ------------------------------------ | ----------------------------------------------------- |
+| **创建型** | 1. 单例（Singleton）                  | 全局唯一实例                         | Spring Bean（默认单例）、配置中心、线程池、日志对象   |
+|            | 2. 工厂方法（Factory Method）         | 接口定义工厂，子类决定实例化哪一个类 | MyBatis SqlSessionFactory、LoggerFactory              |
+|            | 3. 抽象工厂（Abstract Factory）       | 提供一个接口创建一系列相关对象       | Spring 的 BeanFactory（不同 profile 环境）            |
+|            | 4. 建造者（Builder）                  | 复杂对象分步骤创建                   | StringBuilder、Lombok @Builder、MyBatis Plus Wrapper  |
+|            | 5. 原型（Prototype）                  | 通过 clone 创建对象                  | 深拷贝场景、Spring prototype Bean                     |
+| **结构型** | 6. 适配器（Adapter）                  | 把不兼容的接口转换成目标接口         | Slf4j → Logback 适配、SpringMVC HandlerAdapter        |
+|            | 7. 装饰器（Decorator）                | 动态给对象添加职责                   | IO 流（BufferedInputStream）、Spring Cache            |
+|            | 8. 代理（Proxy）                      | 控制对对象的访问                     | Spring AOP、MyBatis Mapper 代理、Dubbo 远程调用       |
+|            | 9. 外观（Facade）                     | 为子系统提供统一入口                 | SpringBoot 启动类、MyBatis Configuration              |
+|            | 10. 组合（Composite）                 | 树形结构统一处理单个对象和组合对象   | 组织架构、文件目录、Vue 组件树                        |
+|            | 11. 享元（Flyweight）                 | 大量细粒度对象共享                   | Integer.valueOf(-128~127) 缓存、线程池里的 Thread     |
+|            | 12. 桥接（Bridge）                    | 将抽象和实现分离                     | JDBC Driver（DriverManager + 具体数据库驱动）         |
+| **行为型** | 13. 模板方法（Template Method）       | 定义算法骨架，子类实现具体步骤       | Spring JdbcTemplate、HttpServlet.service()            |
+|            | 14. 策略（Strategy）                  | 封装算法族，运行时可替换             | 支付方式切换、排序算法、Spring InstantiationStrategy  |
+|            | 15. 观察者（Observer）                | 一对多依赖，状态变化通知             | Spring Event、Guava EventBus、监听器模式              |
+|            | 16. 责任链（Chain of Responsibility） | 请求沿着链传递，直到被处理           | Filter 链、Spring Security 过滤器链、ExceptionHandler |
+|            | 17. 命令（Command）                   | 将请求封装为对象                     | Runnable、MyBatis Plus 批量操作、事务回滚命令         |
+|            | 18. 迭代器（Iterator）                | 遍历集合而不暴露内部结构             | List.iterator()、ResultSet                            |
+|            | 19. 中介者（Mediator）                | 对象通过中介者通信，降低耦合         | Netty ChannelHandlerContext                           |
+|            | 20. 备忘录（Memento）                 | 保存和恢复对象状态                   | 游戏存档、Spring BeanDefinition 快照                  |
+|            | 21. 状态（State）                     | 对象行为随状态改变而改变             | TCP 连接状态机、订单状态流转                          |
+|            | 22. 访问者（Visitor）                 | 在不改类的情况下添加新操作           | AST 解析器、MyBatis Plus 注解处理器                   |
+|            | 23. 解释器（Interpreter）             | 定义语法规则并解释                   | Spring Expression Language (SpEL)、规则引擎           |
+
+### 现代/常见扩展模式（大厂高频）
+
+| 模式            | 说明                              | 典型应用                    |
+| --------------- | --------------------------------- | --------------------------- |
+| **工厂 Bean**   | Spring 中最常见的创建型模式       | @Bean、FactoryBean          |
+| **门面模式**    | SpringBoot 自动配置类就是 Facade  | spring-boot-starter-xxx     |
+| **代理模式**    | Spring AOP、MyBatis Mapper 的核心 | CGLIB / JDK 动态代理        |
+| **模板方法**    | Spring 所有 XxxTemplate           | RedisTemplate、RestTemplate |
+| **策略 + 工厂** | 超级常见组合                      | 支付路由、降级策略          |
+
+### 面试经典回答模板（背完直接上）
+
+> 我在项目中用过以下几种设计模式（挑 5~6 个说就够）：
+> 1. **单例**：Spring Bean 默认单例、全局配置类、工具类
+> 2. **工厂**：MyBatis 的 SqlSessionFactory、Spring 的 BeanFactory
+> 3. **代理**：Spring AOP 实现事务、日志、缓存；MyBatis Mapper 接口
+> 4. **模板方法**：自定义 BaseService 封装公共 CRUD、继承 JdbcTemplate
+> 5. **策略模式 + 工厂**：支付模块根据支付类型选择不同策略（支付宝、微信）
+> 6. **观察者**：自定义事件发布/订阅、Spring ApplicationEvent
+> 7. **建造者**：Lombok @Builder、MyBatis Plus QueryWrapper 链式构建
+
+### 一句话总结（面试金句）
+
+> **23 种经典模式中，真正天天用到的不超过 8 个**：  
+> **单例、工厂、代理、模板方法、策略、观察者、建造者、装饰器**  
+> **只要这 8 个能说出真实项目场景，99% 的面试都过！**
+
+## 34、深拷贝VS浅拷贝
+
+| 对比维度     | 浅拷贝（Shallow Copy）              | 深拷贝（Deep Copy）                      |
+| ------------ | ----------------------------------- | ---------------------------------------- |
+| 复制了什么   | 只复制对象本身 + 引用（地址）       | 复制对象本身 + 所有嵌套对象（递归复制）  |
+| 引用类型字段 | 复制的是引用地址（指向同一块内存）  | 真正 new 出新对象（完全独立）            |
+| 修改影响     | 修改新对象的引用字段，会影响原对象  | 新旧对象完全独立，互不影响               |
+| 实现难度     | 非常简单（默认 clone() 就是浅拷贝） | 较复杂（需要递归处理所有引用）           |
+| 性能         | 快                                  | 慢（要 new 很多对象）                    |
+| 典型场景     | 基本够用，对象里只有基本类型        | 对象里有集合、数组、自定义对象等引用类型 |
+
+| 方式                             | 是深拷贝还是浅拷贝？ | 说明                       |
+| -------------------------------- | -------------------- | -------------------------- |
+| 对象的 clone() 方法              | 浅拷贝               | 默认只复制引用             |
+| new 对象 + 手动赋值              | 可深拷贝             | 最常用                     |
+| 序列化 + 反序列化                | 深拷贝               | 最彻底（连 final 都行）    |
+| Apache BeanUtils.copyProperties  | 浅拷贝               | 常用但很多人误以为是深拷贝 |
+| JSON 序列化（如 FastJSON、Gson） | 深拷贝               | 简单粗暴，生产常用         |
+
+>“浅拷贝只复制对象和引用地址，引用字段共用同一块内存，改一个另一个也变； 深拷贝递归复制所有层级，新对象和原对象完全独立，互不影响。 Java 中 clone() 默认是浅拷贝，真正深拷贝常用序列化或手动递归实现。”
+
+```
+Person p1 = new Person("张三", 18, new Address("北京"));
+
+// 1. 手动拷贝（推荐）
+Person p2 = new Person(p1.getName(), p1.getAge(), new Address(p1.getAddress().getCity()));
+
+// 2. clone 浅拷贝
+Person p3 = (Person) p1.clone();
+
+// 3. 拷贝构造器（最优雅）
+Person p4 = new Person(p1);  // 自己写一个构造器 Person(Person other)
+
+// 4. 序列化深拷贝（最彻底）
+Person p5 = SerializeUtils.deepClone(p1);  // 工具类封装
+
+// 5. JSON 深拷贝（生产最常用）
+Person p6 = gson.fromJson(gson.toJson(p1), Person.class);
+
+// 6. BeanUtils 浅拷贝（慎用）
+BeanUtils.copyProperties(p1, new Person());
+
+// 7. Spring BeanUtils
+org.springframework.beans.BeanUtils.copyProperties(p1, new Person());
+
+// 8. 第三方工具
+Person p8 = DeepCopy.utils.deepCopyByGson(p1);
+```
+
+“Java 拷贝最常用 3 种：
+
+1. 手动 new（最清晰）
+2. JSON 序列化（最省事 + 深拷贝）
+3. 序列化（最彻底） 其他如 clone、BeanUtils 都是浅拷贝，生产慎用。”
+
+## 35、在自己的代码中，如果创建一个java.lang.String类，这个类是否可以被类加载器加载？为什么。
+
+因为 java.lang 包是 Java 核心包，受 JVM 特殊保护，普通应用程序代码不允许定义 java.lang 包下的类，任何试图加载 java.lang. 中类的行为都会被类加载器直接拒绝。
+
+## 36、说一说你对java.lang.Object对象中hashCode和equals方法的理解。在什么场景下需要重新实现这两个方法。
+
+“equals 相等 → hashCode 必须相等”，这是 Java 哈希容器（HashMap、HashSet、HashTable）能正常工作的基石。
+
+| 方法       | 官方规定（必须背下来）                                       | 违反会怎样？                                 |
+| ---------- | ------------------------------------------------------------ | -------------------------------------------- |
+| equals()   | 1. 自反性：x.equals(x) → true 2. 对称性：x.equals(y) → y.equals(x) 也必须 true 3. 传递性：x.equals(y) && y.equals(z) → x.equals(z) 4. 一致性：多次调用结果一致 5. x.equals(null) → false | 违反对称性/传递性 → HashMap/HashSet 行为异常 |
+| hashCode() | 1. 多次调用返回相同值（只要对象没被修改） 2. **如果 a.equals(b) → a.hashCode() 必须等于 b.hashCode()** 3. 不相等时 hashCode 可以相同（但最好不同，提升哈希表性能） | 违反第2条 → 放进 HashMap 后找不到对象！      |
+
+### 1>默认实现到底长什么样？
+
+```
+// Object 类的默认实现（源码）
+public boolean equals(Object obj) {
+    return (this == obj);   // 直接比较引用地址
+}
+
+public native int hashCode();   // native 方法，返回对象在内存中的地址（或地址转换值）
+```
+
+- 默认 equals 就是 ==
+- 默认 hashCode 基本和对象内存地址挂钩（同一个对象永远相同，不同对象大概率不同）
+
+### 2>什么时候必须重写这两个方法？
+
+| 场景                                        | 为什么必须重写？                                             | 典型例子                |
+| ------------------------------------------- | ------------------------------------------------------------ | ----------------------- |
+| 1. 对象要放进 HashMap/HashSet 做 key 或元素 | 业务上认为“内容相同就是同一个对象”，但默认是按地址判断 → 找不到！ | 实体类（User、Order）   |
+| 2. 业务语义相等（logical equality）         | 比如两个 User(id=1, name="张三") 认为是同一个                | 所有实体类              |
+| 3. 用作缓存的 key                           | 缓存 key 必须内容相等就能命中                                | Redis 缓存、Guava Cache |
+| 4. 集合去重（list → set）                   | 想根据业务字段去重而不是地址去重                             | List<User> 转 Set<User> |
+| 5. 框架要求（JPA/Hibernate 实体）           | @Entity 必须正确实现 equals/hashCode，否则多对一、一对多关系会乱 | JPA 实体类              |
+
+ “**只要对象会被放进 HashMap、HashSet、HashTable 做 key 或元素，或者需要业务含义相等，就必须同时重写 equals 和 hashCode**。”
+
+| 坑                                     | 后果                               | 正确做法                                    |
+| -------------------------------------- | ---------------------------------- | ------------------------------------------- |
+| 只重写 equals，不重写 hashCode         | 放进 HashMap 找不到对象            | 必须一起重写                                |
+| 用可变字段（如 List、name）参与 equals | 修改字段后从 HashMap 找不到原对象  | 只用不可变业务主键（id）                    |
+| 用 instanceof 代替 getClass()          | 违反对称性/传递性（子类问题）      | 永远用 getClass()                           |
+| 用 Lombok @EqualsAndHashCode 没加参数  | 子类不继承父类字段，导致 id 不参与 | 父类加 @EqualsAndHashCode(callSuper = true) |
+
+“Object 的 equals 默认是 ==，hashCode 默认返回内存地址。 
+
+这两个方法是 HashMap/HashSet 等哈希容器正常工作的基石，核心契约是：equals 相等的两个对象必须拥有相同的 hashCode。 
+
+当我们把对象用作 HashMap 的 key、HashSet 的元素，或者需要业务含义相等时，就必须同时重写这两个方法。
+
+重写时推荐基于业务主键（如 id）+ getClass() 来实现，避免使用可变字段和 instanceof，确保满足对称性、传递性和一致性。”
+
+### 3>正确重写
+
+```java
+@Entity
+@Getter @Setter
+public class User {
+    private Long id;
+    private String username;
+    private String email;
+
+    // 推荐：只基于业务主键（通常是 id）
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;  // 关键！防止子类问题
+        User user = (User) o;
+        return Objects.equals(id, user.id);
+    }
+
+    @Override
+    public int hashCode() {
+        return Objects.hash(getClass(), id) //更严谨
+    }
+}
+```
+
+
+
+## 37、实体类的equals和hashCode方法是否可以完全交给Lombok的@Data注解实现？需要注意什么地方？
+
+实体类的`equals`和`hashCode`方法可以通过Lombok的`@Data`注解来自动生成。使用`@Data`注解时，Lombok会为类生成`equals()`和`hashCode()`方法，这些方法将基于类中的字段来实现。
+
+需要注意的是，当使用`@Data`注解时，默认情况下，Lombok生成的`equals()`和`hashCode()`方法只会考虑当前类的字段，而不会考虑超类（父类）的字段。如果你的类继承自另一个类，并且你希望在`equals()`和`hashCode()`方法中包含超类的字段，你需要在`@EqualsAndHashCode`注解中设置`callSuper`属性为`true`。如果不设置`callSuper`为`true`，而你的超类中有重要的字段，那么Lombok生成的方法可能不会正确地处理这些字段，这可能会导致意外的行为。
+
+Lombok实现`equals`和`hashCode`的方式是，它会为类中的每个非静态（non-static）和非瞬态（non-transient）字段生成相应的代码。默认情况下，所有这些字段都会被包含在生成的方法中，除非你使用`@EqualsAndHashCode.Exclude`注解来显式排除某些字段，或者使用`@EqualsAndHashCode.Include`来显式包含某些字段。
+
+此外，如果类中已经存在与Lombok将要生成的方法同名的方法，Lombok不会生成新的方法，也不会发出警告或错误。如果你需要为`equals()`和`hashCode()`方法设置非默认的参数，比如`callSuper`，你可以显式地添加`@EqualsAndHashCode`注解，并设置相应的参数，`@Data`注解会智能地推迟到这些显式注解。
+
+总结来说，Lombok的`@Data`注解可以自动实现实体类的`equals`和`hashCode`方法，但在使用时需要注意超类字段的处理以及可能需要的字段包含或排除。
+
+## 38、那为什么 JPA 实体建议不要用 Lombok 的 @EqualsAndHashCode？
+
+| 序号 | 致命问题（踩中就死）                                     | 具体表现 / 事故案例                                          | 正确做法                                                   |
+| ---- | -------------------------------------------------------- | ------------------------------------------------------------ | ---------------------------------------------------------- |
+| 1    | **懒加载代理对象导致 equals 永远不等**（最常见最致命！） | User 实体有关联的 orders（@OneToMany(fetch = LAZY)） 从数据库查出来的是 Hibernate 代理对象（User$$_jvst123_0） getClass() 变成代理类 → 两个 User 实例 getClass() 不同 → equals 永远返回 false → HashSet 重复、缓存失效 | 手动写 equals + getClass()，或者用业务主键（id）           |
+| 2    | **未持久化的实体（id 为 null）导致 equals 行为不一致**   | 新建一个 User u1 = new User("张三") u2 = new User("张三") id 都是 null → equals(true) → 放进 HashSet 变成一个 保存后 id 变成 1 和 2 → 突然 equals(false) → HashSet 里还是只有一个 → 找不到对象！ | 永远只用 id 判断相等，未保存的实体不要放集合               |
+| 3    | **集合中的实体被修改后从 Set 中“丢失”**（经典事故）      | Set<User> users = new HashSet<>() 把 u1 放进去 → hashCode = 123 修改 u1.setUsername("李四")（如果 username 参与了 hashCode）→ hashCode 变成 456 → HashSet 找不到 u1 了！ | 实体 equals/hashCode 只能基于不可变的业务主键（通常是 id） |
+| 4    | **双向关系导致 StackOverflowError**（循环引用）          | User 和 Department 双向关联 @EqualsAndHashCode → equals 调用 department.equals → 再调用 user.equals → 无限递归 → 栈溢出 | 手动写时排除对方字段，或用 @EqualsAndHashCode.Exclude      |
+| 5    | **违反 JPA 规范建议**（官方文档写死了）                  | JPA 规范明确建议：“实体 equals/hashCode 实现应该基于业务主键，不建议使用 Lombok 等自动生成工具” Hibernate 官方文档也专门写了警告 | 手动写，或者用 @NaturalId + 专用工具                       |
+
+“JPA 实体用 Lombok @EqualsAndHashCode = 线上事故制造机！ 
+
+因为懒加载代理、id 为 null、字段可变、循环引用四大天坑， 
+
+大厂 + 官方都禁止，必须手动基于 id 实现 equals/hashCode，一点不能偷懒！”
+
+- “在 JPA 实体中，equals 必须用 getClass() 而不是 instanceof， 对应的 hashCode 也必须写成 Objects.hash(getClass(), id)， 否则不同实体类但 id 相同时 hashCode 会相同， 导致 HashMap/HashSet 行为异常，出现对象被覆盖、缓存穿透等严重 bug。 这是 JPA 实体实现 equals/hashCode 的终极最佳实践，大厂强制要求！”
+- “在 JPA 实体里写 equals，instanceof 是雷区，getClass() 是保险箱。 因为要满足对称性、传递性，还要防 Hibernate 代理对象，只能用 getClass() + 业务主键（通常是 id）。”
+
+Lombok 的 @EqualsAndHashCode 默认使用 instanceof + 所有字段
+
+## 39、在jdk1.5中，引入了泛型，泛型的存在是用来解决什么问题。
+
+“JDK 1.5 引入泛型，最根本的目的就是解决集合的类型安全问题， 把原来只能在运行时发现的 ClassCastException 提前到编译期暴露出来，
+
+## 40、这样的a.hashcode() 有什么用，与a.equals(b)有什么关系。
+
+“hashCode() 是为了让对象能又快又准地放进 HashMap、HashSet 这类哈希容器，而 equals() 是最终判断两个对象是否真的相等。 Java 官方规定了一个永远不能违背的生死契约： equals 相等的两个对象，hashCode 必须 100% 相等！ 反过来，hashCode 相等的两个对象，equals 可以相等也可以不相等。”
+
+## 41、有没有可能2个不相等的对象有相同的hashcode。
+
+“完全有可能，而且必然会发生！ 两个不相等的对象拥有相同的 hashCode 叫哈希冲突，是正常现象， Java 官方规范明确允许，HashMap/HashSet 也完全能正确处理。 只要满足‘equals 相等 → hashCode 一定相等’这条铁律就行， 反过来 hashCode 相等并不要求 equals 一定相等。”
+
+## 42、Java中的HashSet内部是如何工作的。
+
+它内部持有一个 HashMap，添加元素时把元素作为 key，value 永远是一个固定的占位对象 PRESENT。 所有操作（增、删、查、判重）本质上都是对底层 HashMap 的 key 进行操作。 HashSet 的去重、快速查找、O(1) 性能全部来源于 HashMap 的哈希表实现，
+
+```java
+HashSet.add("hello")
+       ↓
+HashMap.put("hello", PRESENT)   ← 真正执行的是这一步
+       ↓
+1. 计算 "hello".hashCode() → 得到一个 int 值
+2. 通过 (hash & (table.length-1)) 定位到哪个桶（bucket）
+3. 桶里如果有对象 → 挨个 equals 比较
+   - 找到 equals 为 true 的 → 返回旧值（说明已存在）
+   - 没找到 → 插入新节点，返回 null（说明添加成功）
+4. HashSet 的 add 方法判断 map.put() 返回 null → 返回 true（添加成功）
+```
+
+## 43、java8的新特性。
+
+| 排名 | 特性                        | 一句话解释                                     | 生产中最常用场景（必背）                              |
+| ---- | --------------------------- | ---------------------------------------------- | ----------------------------------------------------- |
+| 1    | **Lambda 表达式**           | 让代码变成“函数式”，告别匿名内部类             | 集合操作、线程池、Stream、事件监听                    |
+| 2    | **Stream API**              | 管道式处理集合，像 SQL 一样写业务代码          | 列表过滤、分组、排序、聚合（最常用！）                |
+| 3    | **函数式接口**              | 只有一个抽象方法的接口（@FunctionalInterface） | Runnable、Comparator、Predicate、Function、Consumer   |
+| 4    | **默认方法（default）**     | 接口可以有带方法体的方法，解决接口升级问题     | Collection.stream()、List.sort() 全靠它               |
+| 5    | **方法引用 ::**             | Lambda 的语法糖，更简洁                        | `System.out::println`、`User::new`、`String::valueOf` |
+| 6    | **Optional 类**             | 优雅解决 NPE（空指针）问题                     | 替代 if(obj!=null)、链式取值、返回值防空              |
+| 7    | **新的日期时间 API**        | 线程安全、设计合理，终于干掉老 Date/Calendar   | `LocalDateTime`、`ZonedDateTime`、`Duration`          |
+| 8    | **并行流 parallelStream**   | 多核 CPU 轻松并行处理大数据集合                | 大集合统计、批量处理（谨慎使用，注意线程安全）        |
+| 9    | **Nashorn JavaScript 引擎** | 可在 Java 中直接运行 JS（Java 15 已移除）      | 少用，基本淘汰                                        |
+| 10   | **MetaSpace 取代 PermGen**  | 永久代改成元空间，用本地内存，不再 OOM         | JVM 调优不再调 -XX:MaxPermSize                        |
+
+| 问题                         | 标准回答（直接背）                                           |
+| ---------------------------- | ------------------------------------------------------------ |
+| 你最喜欢 Java 8 的哪个特性？ | **Stream + Lambda**，让代码量减少 50%+，可读性爆表           |
+| parallelStream 有没有坑？    | 有！线程不安全、数据量小反而更慢、有序性可能丢失             |
+| default 方法解决什么问题？   | 接口升级时兼容老实现（比如 java 8 给 Collection 加了 stream()） |
+| Optional 是万能的吗？        | 不是！不能替代所有 null 判断，滥用反而代码更丑               |
+
+## 44、什么是序列化，怎么序列化，为什么序列化，反序列化会遇到什么问题，如何解决。
+
+| 问题                                                 | 标准答案（直接背）                                           |
+| ---------------------------------------------------- | ------------------------------------------------------------ |
+| **什么是序列化？**                                   | 把 Java 对象转换成字节数组（byte[]）的过程。反过来，把字节数组恢复成 Java 对象叫反序列化。 |
+| **怎么序列化？**                                     | 1. 类实现 Serializable 接口（标记接口，无方法） 2. 用 ObjectOutputStream.writeObject(obj) 写出去 3. 用 ObjectInputStream.readObject() 读回来 |
+| **为什么需要序列化？**（5 大真实场景）               | 1. 对象网络传输（RPC、RMI、Socket） 2. 对象持久化到文件/数据库（缓存快照、日志） 3. 深拷贝（最彻底的深拷贝方式） 4. 分布式系统传递（Redis 缓存、Kafka 消息、Dubbo 参数） 5. Android Parcelable 底层也是序列化 |
+| **反序列化会遇到什么问题？**（8 大坑，线上事故常客） | 1. serialVersionUID 不一致 → InvalidClassException 2. 类结构改变（删了字段、改了类型）→ 反序列化失败 3. transient 字段丢失（不参与序列化） 4. 静态字段不序列化 5. 父类没实现 Serializable → 父类字段全部丢失 6. 循环引用 → 正常（JVM 自动处理） 7. 反序列化时执行恶意代码（黑客攻击神器） 8. 单例/枚举被破坏 |
+| **如何解决这些问题？**（生产级最佳实践）             | 见下表（背完无敌）                                           |
+
+| 问题                     | 解决方案（必写）                                             | 代码示例 |
+| ------------------------ | ------------------------------------------------------------ | -------- |
+| serialVersionUID 不一致  | 显式声明 private static final long serialVersionUID = 1L;（推荐用 IDEA 自动生成） | 是       |
+| 类结构变化               | 1. 永远不要删字段，只加新字段 2. 用 defaultReadObject + 手动兼容老字段 3. 推荐用 JSON 替代 | 是       |
+| transient 字段丢失       | 想序列化就别加 transient，想控制就自己写 writeObject/readObject | 是       |
+| 父类没实现 Serializable  | 父类也加上 Serializable，或子类自己手动序列化父类字段        | 是       |
+| 防止反序列化破坏单例     | 实现 readResolve() 方法返回单例实例                          | 是       |
+| 防止反序列化执行恶意代码 | 1. 不要反序列化不可信数据 2. 用 ObjectInputFilter（JDK 9+） 3. 生产推荐用 JSON/FastJSON | 是       |
+| 深拷贝最彻底方式         | 序列化 + 反序列化就是最彻底的深拷贝（连 final 字段都能拷贝） | 是       |
+
+### 终极结论（面试/架构师必背 3 句话）
+
+1. “Java 序列化就是把对象转成字节数组，用于网络传输、持久化、深拷贝，是分布式系统的基石。”
+2. “反序列化最大风险是 serialVersionUID 不一致和安全漏洞，生产环境必须显式声明 serialVersionUID，严禁反序列化不可信数据。”
+3. “2025 年大厂趋势：**新项目一律禁止用 Java 原生序列化，全部改用 JSON（FastJSON2/Jackson）或 Protostuff**，性能更高、更安全、跨语言。”
 
 # JVM
 
